--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,10 +37,10 @@
     </button>
     <main>
       <h1>
-        <span class="greeting" data-behavior="greeting"></span>
+        The contract says: <span class="greeting" data-behavior="greeting"></span>
       </h1>
       <form class="change">
-        <label>Change greeting:</label>
+        <label for="greeting">Change greeting:</label>
         <div>
           <input
               autocomplete="off"
@@ -50,20 +50,6 @@
           <button>Save</button>
         </div>
       </form>
-      <ul class='information'>
-        <li>Your account ID:&nbsp;
-          <a target="_blank" rel="noreferrer" href="" data-behavior="account-id"></a>
-        </li>
-        <li>Network ID: <a target="_blank" rel="noreferrer" data-behavior="network-id"></a></li>
-        <li>Contract name:&nbsp;
-          <a target="_blank" rel="noreferrer" href="" data-behavior="contract-name"></a>
-        </li>
-        <li>Current state on the blockchain: <br/>
-          <code>
-            &#123; greeting: '<span data-behavior="greeting"></span>' &#125;
-          </code>
-        </li>
-      </ul>
       <p>
         Look at that! A Hello World app! This greeting is stored on the NEAR blockchain. Check it out:
       </p>
