--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
 <body>
   <main id="signed-out-flow" style="display: none">
     <h1>
-      <span class="greeting" data-behavior="greeting"></span>
+      The contract says: <span class="greeting" data-behavior="greeting"></span>
     </h1>
-    <h2>
+    <h3>
       Welcome to NEAR!
-    </h2>
+    </h3>
     <p>
       Your contract is storing a greeting message in the NEAR blockchain. To
       change it you need to sign in using the NEAR Wallet. It is very simple,
