minor changes to frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,9 @@
 <body>
   <main id="signed-out-flow" style="display: none">
     <h1>
-      The contract says: <span class="greeting" data-behavior="greeting"></span>
-    </h1>
-    <h3>
+      <span class="greeting" data-behavior="greeting"></span>! 
       Welcome to NEAR!
-    </h3>
+    </h1>
     <p>
       Your contract is storing a greeting message in the NEAR blockchain. To
       change it you need to sign in using the NEAR Wallet. It is very simple,
@@ -37,7 +35,7 @@
     </button>
     <main>
       <h1>
-        The contract says: <span class="greeting" data-behavior="greeting"></span>
+        <span class="greeting" data-behavior="greeting"></span>! Welcome to NEAR!
       </h1>
       <form class="change">
         <label for="greeting">Change greeting:</label>
