--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,6 +98,6 @@
     </main>
   </div>
 
-  <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/index.js" type="module"></script>
 </body>
 </html>
