--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./assets/img/favicon.ico" />
-  <link rel="apple-touch-icon" href="./assets/img/favicon.ico" />
+  <link rel="icon" href="assets/favicon.ico"/>
+  <link rel="apple-touch-icon" href="assets/favicon.ico"/>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
   <title>Welcome to NEAR</title>
-  <link rel="stylesheet" href="./assets/css/global.css">
+  <link rel="stylesheet" href="assets/global.css">
 </head>
 <body>
   <main id="signed-out-flow" style="display: none">
     <h1>
-      <label
-          for="greeting"
-          data-behavior="greeting"
-          style="color: var(--secondary); border-bottom: 2px solid var(--secondary);"
-        >
-      </label>!
-      Welcome to NEAR!
+      The contract says: <span class="greeting" data-behavior="greeting"></span>
     </h1>
+    <h3>
+      Welcome to NEAR!
+    </h3>
     <p>
       Your contract is storing a greeting message in the NEAR blockchain. To
       change it you need to sign in using the NEAR Wallet. It is very simple,
@@ -30,50 +28,40 @@
       only for testing!
     </p>
     <p style="text-align: center; margin-top: 2.5em">
-      <button id="sign-in-button">Sign in</button>
+      <button id="sign-in-button">Sign in with NEAR Wallet</button>
     </p>
+
   </main>
 
   <div id="signed-in-flow" style="display: none">
-    <button class="link" style="float: right" id="sign-out-button">
-      Sign out
+    <button style="float: right" id="sign-out-button">
+      Sign out <span data-behavior="account-id"></span>
     </button>
     <main>
       <h1>
-        <label
-          for="greeting"
-          data-behavior="greeting"
-          style="color: var(--secondary); border-bottom: 2px solid var(--secondary);"
-        >
-        </label>
-        <span data-behavior="account-id"></span>!
+        The contract says: <span class="greeting" data-behavior="greeting"></span>
       </h1>
-      <form>
-        <fieldset id="fieldset">
-          <label
-            for="greeting"
-            style="display: block; color: var(--gray); margin-bottom: 0.5em"
-          >
-            Change greeting
-          </label>
-          <div style="display: flex">
-            <input
-              style="flex: 1"
-              autocomplete="off"
-              id="greeting"
-              data-behavior="greeting"
-            />
-            <button style="border-radius: 0 5px 5px 0">Save</button>
-          </div>
-        </fieldset>
+      <form class="change">
+        <label for="greeting">Change greeting:</label>
+        <div>
+          <input
+                  autocomplete="off"
+                  id="greeting"
+                  data-behavior="greeting"
+          />
+          <button>
+            <span>Save</span>
+            <div class="loader"></div>
+          </button>
+        </div>
       </form>
       <p>
         Look at that! A Hello World app! This greeting is stored on the NEAR blockchain. Check it out:
       </p>
       <ol>
         <li>
-          Look in <code>assets/js/index.js</code> and <code>assets/js/utils.js</code> – you'll see <code>getGreeting</code>
-          and <code>setGreeting</code> being called on <code>contract</code>.
+          Look in <code>index.js</code> and <code>near-api.js</code> – you'll see <code>get_greeting</code>
+          and <code>set_greeting</code> being called on <code>contract</code>.
           What's this?
         </li>
         <li>
@@ -82,7 +70,7 @@
           <a target="_blank" href="https://docs.near.org/docs/develop/contracts/overview">smart contract</a>.
         </li>
         <li>
-          When you run <code>yarn dev</code>, the code in
+          When you run <code>npm run dev</code>, the code in
           <code>assembly/index.ts</code> gets deployed to the NEAR testnet. You
           can see how this happens by looking in <code>package.json</code> at the
           <code>scripts</code> section to find the <code>dev</code> command.
@@ -98,6 +86,6 @@
     </main>
   </div>
 
-  <script src="./assets/js/index.js" type="module"></script>
+  <script src="index.js" type="module"></script>
 </body>
 </html>
